Fix tus example based on goa fix to disallow response body for HEAD
